force-spa-testschema/src/objects/GuildApprenticeship__c.object
<CustomObject>
    <fields>
        <fullName>Apprentice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apprentice</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GuildMasters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guild__c</fullName>
        <label>Guild</label>
        <referenceTo>Guild__c</referenceTo>
        <relationshipLabel>Guild Apprenticeships</relationshipLabel>
        <relationshipName>GuildApprenticeships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GuildApprentices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SinceDate__c</fullName>
        <label>Since Date</label>
        <type>DateTime</type>
    </fields>
    <label>Guild Apprenticeship</label>
    <nameField>
        <displayFormat>GA-{000000}</displayFormat>
        <label>Guild Apprenticeship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guild Apprenticeships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>